[Update] home.html

--- a/StockPriceQuery/templates/home.html
+++ b/StockPriceQuery/templates/home.html
@@ -35,10 +35,10 @@
         </div>
       </div>
       <textarea class="col-md-8" rows="8" placeholder="read only" readonly style="resize: none; width: 300px; text-align: left;">
-        이수구분 :
-        학년 :
-        학번 :
-        이름 :
+        이수구분 : {{gubun}}
+        학년 : {{grade}}
+        학번 :  {{stu_dept}}
+        이름 :  {{stu_name}}
       </textarea>
     </div>
   </form>
