[Update] 🎨 home.html
Add class and style

--- a/StockPriceTableNChartCORS/templates/home.html
+++ b/StockPriceTableNChartCORS/templates/home.html
@@ -17,7 +17,7 @@
     <p class="jumbotronTextOnImages" id="JumbotronPara">
       아래의 30 종목 중 관심 있는 종목의 가격 변동을 알아 본다
     </p>
-    <table class="jumbotronTextOnImages" id="JumbotronTable" border="1" style="width: 80%">
+    <table class="jumbotronTextOnImages table header-fixed table-condensed table-striped" id="JumbotronTable" border="1" style="width: 80%; color: black; background: #e6e6e6;">
       <tbody>
         {% for st in stockNames %} {% if loop.index0 is divisibleby 6 %}
         <tr>
